--- a/app/css/app.css
+++ b/app/css/app.css
@@ -19,11 +19,10 @@ h3 {
   color: #5C5C58;
   font-weight: bold;
   text-transform: uppercase;
-  font-size: 1.5em;
+  font-size: 1.625em;
   text-align: center;
   margin-bottom: 12px;
   margin-top: 20px;
-  font-style: italic;
 }
 
 h4{
@@ -33,12 +32,12 @@ h4{
   text-transform: uppercase;
   font-size: 1.313em;
   text-align: center;
-  margin-bottom: 12px;
-  margin-top: 12px;
+  margin-bottom: 8px;
+  margin-top: 8px;
 }
 
 h6 {
-  font-size: 1.2em;
+  font-size: 1.250em;
   font-family:"cronos-pro", helvetica, sans-serif; 
   color: #5C5C58;
   font-weight: bold;
@@ -50,11 +49,11 @@ h6 {
 /*UNIVERSAL STYLE*/
 
 .break-right {
-  border-right: 1px solid #D4D4D4;
+  border-right: 2px dotted #D4D4D4;
 }
 
 .break-left {
-  border-left: 1px solid #D4D4D4;
+  border-left: 2px dotted #D4D4D4;
 }
 
 .border-margin {
@@ -62,13 +61,19 @@ h6 {
 }
 .border-break{
   border-left: 1px solid #D4D4D4;
+  margin-bottom: 3px;
+}
+.pad-r {
+  padding-right: 15px;
+}
+.pad-l {
+  padding-left: 15px;
 }
 .title {
   font-family:"cronos-pro", helvetica, sans-serif; 
   color: #5C5C58;
   font-weight: bold;
   font-size: 1.125em;
-  font-style: italic;
 }
 .title-pad {
     margin-top: 80px;
@@ -76,12 +81,12 @@ h6 {
 #swirl-image{
   display: block;
   background-color: #fdfdfd;
-  background: -webkit-gradient(linear, 50% 0%, 50% 100%, color-stop(0%, rgba(255, 255, 255, 0.4)), color-stop(50%, #FFF)),url('../img/white_wave.png');
-  background: -webkit-linear-gradient(rgba(255, 255, 255, 0.4),#fdfdfd 50%),url('../img/white_wave.png');
-  background: -moz-linear-gradient(rgba(255,255,255,0.4),#fdfdfd 50%),url('../img/white_wave.png');
-  background: -o-linear-gradient(rgba(255,255,255,0.4),#fdfdfd 50%),url('../img/white_wave.png');
-  background: linear-gradient(rgba(255, 255, 255, 0.4),#fdfdfd 50%),url('../img/white_wave.png');
-  background-image: linear-gradient(rgba(255, 255, 255, 0.4), #fdfdfd 50%), url('../img/white_wave.png');
+  background: -webkit-gradient(linear, 50% 0%, 50% 100%, color-stop(0%, rgba(255, 255, 255, 0.4)), color-stop(40%, #FFF)),url('../img/white_wave.png');
+  background: -webkit-linear-gradient(rgba(255, 255, 255, 0.4),#fdfdfd 40%),url('../img/white_wave.png');
+  background: -moz-linear-gradient(rgba(255,255,255,0.4),#fdfdfd 40%),url('../img/white_wave.png');
+  background: -o-linear-gradient(rgba(255,255,255,0.4),#fdfdfd 40%),url('../img/white_wave.png');
+  background: linear-gradient(rgba(255, 255, 255, 0.4),#fdfdfd 40%),url('../img/white_wave.png');
+  background-image: linear-gradient(rgba(255, 255, 255, 0.4), #fdfdfd 40%), url('../img/white_wave.png');
   background-position-x: initial, initial;
   background-position-y: initial, initial;
   background-size: initial, initial;
