--- a/app/css/app.css
+++ b/app/css/app.css
@@ -273,6 +273,42 @@ h6 {
   font-weight: bold;
 }*/
 
+/*HOme-page*/
+#image-page-wrap{
+  position: relative;
+  display: block;
+  height: 100%;
+  width: 100%;
+  margin: 0;
+  overflow: hidden;
+  background-image: url(../img/homepage1.jpg);
+ /* opacity:0.9;
+  filter:alpha(opacity=90); /* For IE8 and earlier */*/
+  -moz-background-size: cover;
+  -webkit-background-size: cover;
+  -o-background-size: cover;
+  background-size: cover;
+  background-repeat: no-repeat;
+  background-position: center;
+}
+
+#module {
+  width: 100%;
+  position: absolute;
+  top: 40%;
+  min-height: 150px;
+  cursor: pointer;
+  background-color: rgba(255,255, 255, .7);
+}
+
+.index-left img {
+  position: relative;
+}
+#nav-homepage{
+  width: 80%;
+  height:50px;
+  position: relative;
+}
 
 
 
