--- a/app/css/app.css
+++ b/app/css/app.css
@@ -215,6 +215,11 @@ h6 {
 .slanted {
   font-style: italic;
 }
+
+.white a {
+  color:#fff;
+  font-size: 1.063em;
+}
 /*sub nav bar*/
 
 /*.sub-nav-about li{
@@ -273,7 +278,7 @@ h6 {
   font-weight: bold;
 }*/
 
-/*HOme-page*/
+/*Home-page*/
 #image-page-wrap{
   position: relative;
   display: block;
@@ -281,7 +286,7 @@ h6 {
   width: 100%;
   margin: 0;
   overflow: hidden;
-  background-image: url(../img/homepage1.jpg);
+  background-image: url(../img/homepage-update.gif);
  /* opacity:0.9;
   filter:alpha(opacity=90); /* For IE8 and earlier */*/
   -moz-background-size: cover;
@@ -293,21 +298,38 @@ h6 {
 }
 
 #module {
-  width: 100%;
+  width: 600px;
+  height:300px;
   position: absolute;
-  top: 40%;
-  min-height: 150px;
+  top: 28%;
+  left:5%;
+  min-height: 300px;
   cursor: pointer;
-  background-color: rgba(255,255, 255, .7);
+  background-color: rgba(0, 0, 0, .9);
+}
+
+.module-padding{
+  padding:20px;
+}
+
+.index-text {
+  color: #fff;
+  font-size: 1.063em;
+}
+
+.title-homepage {
+  color:#fff;
+  text-transform: uppercase;
 }
 
 .index-left img {
   position: relative;
 }
 #nav-homepage{
-  width: 80%;
   height:50px;
   position: relative;
+  width: 88%;
+  margin-bottom: 10px;
 }
 
 
