--- a/app/css/foundation.css
+++ b/app/css/foundation.css
@@ -1521,6 +1521,7 @@ label {
   display: block;
   font-weight: 500;
   margin-bottom: 0.1875em;
+  font-weight: bold;
   /* Styles for required inputs */ }
   label.right {
     float: none;
